--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -191,7 +191,7 @@ In memory of my fater, Donald Anthony Vanlangenberg
 \input{chapters/circle_2.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Parametric Models on a Sphere}
+\chapter{Parametric Models and Estimation on a Sphere}
 \input{chapters/sphere_2.tex}
 
 %%------------------------------------------------------------------%%
