--- a/main_doc.tex
+++ b/main_doc.tex
@@ -10,8 +10,8 @@
 %% Note that several packages including amsmath, amsthm, amsfonts,
 %% hyperref have already been loaded.  
 \usepackage{amsmath}
+\usepackage{natbib,apalike, float} 
 \usepackage{undertilde}
-\usepackage{float}
 \usepackage{enumerate}
 \usepackage{graphicx}
 \usepackage{framed}
@@ -20,6 +20,8 @@
 \usepackage{setspace}
 \usepackage[font=doublespacing]{caption} % caption double space
 \usepackage[bottom]{footmisc} %footnote page bottom
+\usepackage{bm}
+
 
 
 
@@ -212,7 +214,9 @@ In memory of my father, Donald Anthony Vanlangenberg
 %%------------------------------------------------------------------%%
 
 \bibliography{biblography}
-\bibliographystyle{amsalpha}
+% \bibliographystyle{amsalpha}
+\bibliographystyle{apalike}
+
 
 %%------------------------------------------------------------------%%
 %%------------------------- Appendices -----------------------------%%
